[package]
name = "parse_duration2"
version = "2.1.2"
authors = ["zeta12ti <zeta12ti@protonmail.com>", "Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/parse_duration/"
repository = "https://github.com/mverleg/parse_duration/"
documentation = "https://docs.rs/parse_duration2"
description = "Parses a duration from a string. Fork with security fix."
readme = "README.md"
keywords = ["duration", "date", "string", "parse"]
categories = ["command-line-interface", "parsing"]
license = "MIT"

[dependencies]
regex = "1.5.6"
lazy_static = "1.4.0"
num = "0.4.0"
