[package]
name = "parse_duration0"
version = "2.1.2"
authors = ["zeta12ti <zeta12ti@protonmail.com>", "Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/parse_duration/"
repository = "https://github.com/mverleg/parse_duration/"
documentation = "https://docs.rs/parse_duration0"
description = "Parses a duration from a string. Fork with security fix."
readme = "README.md"
keywords = ["duration", "date", "string", "parse"]
categories = ["command-line-interface", "parsing"]
license = "MIT"
edition = "2021"

[dependencies]
regex = { version = "1.5.6", default-features = false, features = ["std", "perf"] }
lazy_static = { version = "1.4.0", default-features = false }
